# python-project-50

./: .coverage  README.md  coverage.xml  pyproject.toml
.github/workflows/: pyci.yml
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: right1.txt
